<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_login"
        android:icon="@drawable/login"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/login"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/submenu"
        android:icon="@drawable/sign_direction"
        android:showAsAction="ifRoom|withText"
        android:title="@string/direction">
        <menu>
            <item
                android:id="@+id/setoffer"
                android:title="@string/setoffer"/>
            <item
                android:id="@+id/request"
                android:title="@string/request"/>
        </menu>
    </item>

</menu>
