<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_smoker" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_female" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_male" />
    
    	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="85dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" >
	
	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="44dp"
	        android:text="@string/price" />

   		 </LinearLayout>
   		 


    </LinearLayout>
    

   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editTextSeatNum"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.12"
            android:ems="10"
            android:inputType="number" />
        
        	    <TextView
        	        android:id="@+id/textSeatNum"
        	        android:layout_width="wrap_content"
        	        android:layout_height="44dp"
        	        android:text="@string/seatsNum" />
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_confirmAddress"
            style="android:buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/bt_cancell"
            style="android:buttonStyle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>



</LinearLayout>