<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/inputAddress1"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/typeAddress"
        android:inputType="textCapWords|textPostalAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/bt_fromMap1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from" />

    <EditText
        android:id="@+id/inputAddress2"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/typeAddress"
        android:inputType="textCapWords|textPostalAddress" />

    <Button
        android:id="@+id/bt_fromMap2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WhereTo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bt_confirmAddress"
            style="android:buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/bt_cancell"
            style="android:buttonStyle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>